# snipper

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
icons/lucide/: icon_map.txt
qml/: CaptureOverlay.qml  FloatingImageWindow.qml  Icons.qml  Main.qml  Preview.qml  SelectionCanvas.qml  Style.qml
qml/components/: ColorPickerDisplay.qml  FluentButton.qml  FluentTitlebar.qml  MainPageToolbar.qml  MainToolbar.qml  SelectionCanvasToolbar.qml  Titlebar.qml  Toast.qml
qml/components/layouts/: Titlebar.qml
qml/components/overlays/: ColorPickerOverlay.qml  CountdownOverlay.qml  SnippingOverlay.qml
qml/components/ui/: BaseButton.qml  DropdownMenu.qml  DropdownMenuItem.qml  WindowToolButton.qml
qml/components/window/: WindowResizeHandlers.qml
qml/pages/: MainPage.qml  PalettePage.qml
src/: AppState.h  app_settings.hpp  app_state.hpp  colorhistory.h  main.cpp  snipper.cpp  snipper.h  snipper_manager.cpp  snipper_manager.h  window_manager.cpp  window_manager.h
src/core/: colorhistory.cpp  colorhistory.h  navigator.hpp  snipper_manager.cpp  snipper_manager.h
src/state/: app_settings.hpp  app_state.hpp
src/window/: window_manager.cpp  window_manager.h
